# Tauri_Sticky_Notes

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.jsx  NoteContext.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/List/: List.css  List.jsx
src/components/Menu/: Menu.css  Menu.jsx
src/components/NoteCard/: NoteCard.css  NoteCard.jsx
src/components/NoteFooterMenu/: NoteFooterMenu.css  NoteFooterMenu.jsx
src/components/NoteMenu/: NoteMenu.css  NoteMenu.jsx
src/components/Search/: Search.css  Search.jsx
src/components/Settings/: Settings.css  Settings.jsx
src/components/Title/: Title.css  Title.jsx
src/pages/: Home.jsx  Note.css  Note.jsx
stickynotes_rust_backend/: Cargo.toml
stickynotes_rust_backend/src/: main.rs  note.rs
